--- a/css/styles.css
+++ b/css/styles.css
@@ -818,3 +818,60 @@ body.no-scroll::-webkit-scrollbar {
 .work-item img.loaded {
     opacity: 1;
 }
+
+/* Кнопка "Наверх" */
+.scroll-to-top {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    background-color: transparent;
+    color: #000;
+    border: 1.5px solid #000;
+    border-radius: 4px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-size: 1.2rem;
+    opacity: 0;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    z-index: 1000;
+}
+
+.scroll-to-top.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.scroll-to-top.hidden {
+    opacity: 0;
+    transform: translateY(20px);
+    pointer-events: none; /* Отключаем взаимодействие, когда кнопка скрыта */
+}
+
+.scroll-to-top:hover {
+    background-color: #f0f0f0;
+}
+
+/* Уменьшаем кнопку на мобильных устройствах */
+@media (max-width: 768px) {
+    .scroll-to-top {
+        width: 25px;
+        height: 25px;
+        font-size: 1rem;
+        bottom: 0.8rem;
+        right: 0.8rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .scroll-to-top {
+        width: 22px;
+        height: 22px;
+        font-size: 0.9rem;
+        bottom: 0.5rem;
+        right: 0.5rem;
+    }
+}
