--- a/css/styles.css
+++ b/css/styles.css
@@ -822,12 +822,12 @@ body.no-scroll::-webkit-scrollbar {
 /* Кнопка "Наверх" */
 .scroll-to-top {
     position: fixed;
-    bottom: 1rem;
-    right: 1rem;
+    bottom: 0.8em;
+    right: 0.7rem;
     background-color: transparent;
     color: #000;
     border: 1.5px solid #000;
-    border-radius: 4px;
+    border-radius: 10px;
     width: 30px;
     height: 30px;
     display: flex;
@@ -861,8 +861,8 @@ body.no-scroll::-webkit-scrollbar {
         width: 25px;
         height: 25px;
         font-size: 1rem;
-        bottom: 0.8rem;
-        right: 0.8rem;
+        bottom: 0.6rem;
+        right: 0.4rem;
     }
 }
 
@@ -872,6 +872,6 @@ body.no-scroll::-webkit-scrollbar {
         height: 22px;
         font-size: 0.9rem;
         bottom: 0.5rem;
-        right: 0.5rem;
+        right: 0.4rem;
     }
 }
